write about me section pt2

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
 						<h1>ABOUT ME</h1>
 					</header>
 					<p>
-						Hi, everyone! My name is Sarah Huang, and welcome to my website!You can find my resume here and learn about how I started the path of computer science.
+						Hi, everyone! My name is Sarah Huang, and welcome to my website! 
+						<br>
+						You can find my resume here and learn about how I started the path of computer science.
 						<iframe src="images/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>
 						<br>
 						<h3>hello past</h3>
