write about me section pt4

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 					<p>
 						Hi, everyone! My name is Sarah Huang, and welcome to my website! 
 						<br>
-						You can find my resume here and learn about how I started the path of computer science.
-						<br>
-						<iframe src="images/pdfs/sarah_huang_resume.pdf" class="image featured" height="400"></iframe>
+						You can find my résumé here and learn about how I started the path of computer science.
+						<br><br>
+						<iframe src="images/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>
 						<h3>hello past</h3>
-						    At six years old, I learned how computer programming  would allow me to design video games just like the ones I was playing on my pink Nintendo Lite DS. 
+						At six years old, I learned how computer programming  would allow me to design video games just like the ones I was playing on my pink Nintendo Lite DS. 
 						With that childhood dream in mind, I took as many computer science courses as my high school schedule would afford and created a few small, amateur video game projects for class. 
 						I entered my freshman year at the University of Tennessee, Knoxville with a strong coding background. 
 						Despite the challenges of taking first-year computer science courses asynchronously during the pandemic, my success convinced me that this major was the right choice. 
