getting cc to talk

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<br>
 						Below is our powerpoint presentation that explains the software:
 					</p>
-					<iframe src= "images/pdfs/Nulltime Demo.pdf" class="image featured" height="500"></iframe>
+					<!--<iframe src= "images/pdfs/Nulltime Demo.pdf" class="image featured" height="500"></iframe>-->
 					<h3>My Contribution</h3>
 					<p>
 						This project convinced me that I wanted to do front-end development. 
@@ -227,7 +227,7 @@
 						<br>
 						You can find my résumé here and learn about how I started the path of computer science.
 						<br><br>
-						<iframe src="images/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>
+						<!--<iframe src="images/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>-->
 						<h3>hello past</h3>
 						At six years old, I learned how computer programming  would allow me to design video games just like the ones I was playing on my pink Nintendo Lite DS. 
 						With that childhood dream in mind, I took as many computer science courses as my high school schedule would afford and created a few small, amateur video game projects for class. 
@@ -280,8 +280,12 @@
 		</div>
 
 		<div id="companion">
-			<!--<a href="https://www.youtube.com/watch?v=gvlI36lVPgI"><img src="images/gif_test.gif"></a>-->
+			<img src="images/spin.gif" alt="Cute computer model spinning clockwise" onclick="cc_talk()">
 		</div>
+		<audio id="ccAudio">
+			<source src="horse.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+		</audio>
 
 	<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
