--- a/index.html
+++ b/index.html
@@ -280,12 +280,12 @@
 		</div>
 
 		<div id="companion">
-			<img src="images/spin.gif" alt="Cute computer model spinning clockwise" onclick="cc_talk()">
-		</div>
-		<audio id="ccAudio">
-			<source src="horse.mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
-		</audio>
+			<img src="images/spin.gif" alt="Cute computer model spinning clockwise" onclick="comp_talk()">
+			<audio id="compAudio">
+				<source src="images/claire_de_lune.mp3" type="audio/mpeg">
+				Your browser does not support the audio element.
+			</audio>
+		</div>	
 
 	<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
