file reorganize, add more pics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	
+		<style>
+
+	
+			
+		</style>
+	
+	
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper - Keeps everything centered -->
@@ -39,13 +47,13 @@
 					<!-- Picture Slideshow  -->
 					<div class="slideshow-container pic">
 						<div class="slides fade">
-							<img src="images/home_slideshow/me_3024.png" alt="professional headshot of sarah huang">
+							<img src="assets/files/images/home_slideshow/me_3024.png" alt="professional headshot of sarah huang">
 						</div>
 						<div class="slides fade">
-							<img src="images/home_slideshow/sase.jpg" alt="sarah at sase nc 2023">
+							<img src="assets/files/images/home_slideshow/sase.jpg" alt="sarah at sase nc 2023">
 						</div>
 						<div class="slides fade">
-							<img src="images/home_slideshow/ics.png" alt="sarah at kao ics job">
+							<img src="assets/files/images/home_slideshow/ics.png" alt="sarah at kao ics job">
 						</div>
 						<!-- Next and previous buttons -->
 						<a class="prev arrow" onclick="nextSlide(-1)">&#10094;</a>
@@ -64,22 +72,22 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-portfolio" class="image fit"><img src="images/project_thumbnails/pic01.png" alt=""></a>
+								<a href="#work-portfolio" class="image fit"><img src="assets/files/images/project_thumbnails/pic01.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-nulltime" class="image fit"><img src="images/project_thumbnails/pic02.gif" alt=""></a>
+								<a href="#work-nulltime" class="image fit"><img src="assets/files/images/project_thumbnails/pic02.gif" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-cosc452" class="image fit"><img src="images/project_thumbnails/pic03.png" alt=""></a>
+								<a href="#work-cosc452" class="image fit"><img src="assets/files/images/project_thumbnails/pic03.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-dungeon_dweller" class="image fit"><img src="images/project_thumbnails/pic04.png" alt=""></a>
+								<a href="#work-dungeon_dweller" class="image fit"><img src="assets/files/images/project_thumbnails/pic04.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-horde" class="image fit"><img src="images/project_thumbnails/pic05.png" alt=""></a>
+								<a href="#work-horde" class="image fit"><img src="assets/files/images/project_thumbnails/pic05.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="https://github.com/sarhuang" class="image fit"><img src="images/project_thumbnails/pic06.gif" alt=""></a>
+								<a href="https://github.com/sarhuang" class="image fit"><img src="assets/files/images/project_thumbnails/pic06.gif" alt=""></a>
 							</div>
 						</div>
 					</section>
@@ -90,6 +98,7 @@
 					<header>
 						<h2>Personal Portfolio Website - <a href="https://github.com/sarhuang/sarhuang.github.io" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
+					<img src="assets/files/images/project_thumbnails/pic01.png" class="image centered" width="40%" alt="">
 					
 					<h3>Background</h3>
 					<p>
@@ -114,6 +123,7 @@
 					<header>
 						<h2>nulltime - <a href="https://github.com/sarhuang/nullTime-prod" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
+					<img src="assets/files/images/project_thumbnails/pic02.gif" class="image centered" width="40%" alt="">
 					<h3>Background</h3>
 					<p>
 						My favorite college computer science course was Software Engineering in junior year. I always felt unmotivated to get the weekly/bi-weekly coding assignment done because we would just move on to the next one.
@@ -124,7 +134,7 @@
 						<br>
 						Below is our powerpoint presentation that explains the software:
 					</p>
-					<!--<iframe src= "images/pdfs/Nulltime Demo.pdf" class="image featured" height="500"></iframe>-->
+					<iframe src= "assets/files/pdfs/Nulltime Demo.pdf" class="image featured" height="500"></iframe>
 					<h3>My Contribution</h3>
 					<p>
 						This project convinced me that I wanted to do front-end development. 
@@ -144,6 +154,7 @@
 					<header>
 						<h2>COSC 452: Intro to Graphics - <a href="https://github.com/sarhuang/cosc452" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
+					<img src="assets/files/images/project_thumbnails/pic03.png" class="image centered" width="40%" alt="">
 					<h3>Background</h3>
 					<p>
 						This class was definitely a standout in that it is one of the few classes that teach Javascript.
@@ -170,6 +181,7 @@
 					<header>
 						<h2>Dungeon Dweller - <a href="https://github.com/sarhuang/Dungeon-Dweller" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
+					<img src="assets/files/images/project_thumbnails/pic04.png" class="image centered" width="40%" alt="">
 					<h3>Background</h3>
 					<p>
 						The best project I created in high school. In my senior year of high school, we had to create a game with the game engine Greenfoot (meant for education, not real game development).
@@ -178,7 +190,7 @@
 						Fun fact: this game is based on Ponyu, my very first game I made with my friend.
 					</p>		
 					<video class="image featured" controls>
-						<source src="images/videos/dungeon_dweller_demo.mp4" type="video/mp4">
+						<source src="assets/files/videos/dungeon_dweller_demo.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video>						
 					<p>Play the game <a href="https://www.greenfoot.org/scenarios/28303">here</a>.
@@ -198,6 +210,7 @@
 					<header>
 						<h2>Horde - <a href="https://github.com/sarhuang/Horde" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
+					<img src="assets/files/images/project_thumbnails/pic05.png" class="image centered" width="40%" alt="">
 					<h3>Background</h3>
 					<p>
 						For my AP Computer Science Principles project. I wasn't going to take the exam, but I still needed to submit something.
@@ -205,7 +218,7 @@
 						I programmed everything and designed all the sprites and background. 
 					</p>		
 					<video class="image featured" controls>
-						<source src="images/videos/horde_demo.mp4" type="video/mp4">
+						<source src="assets/files/videos/horde_demo.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video>						
 					<p>Play the game <a href="https://www.greenfoot.org/scenarios/28325">here</a>.
@@ -222,12 +235,16 @@
 					<header>
 						<h1>ABOUT ME</h1>
 					</header>
+					<div class="profile-container">
+						<img id="profile" src="assets/files/images/me_icon.png" alt="professional headshot of sarah huang">
+						<p>
+							Hi, everyone! My name is Sarah Huang, and welcome to my website! 
+							You can find my résumé here and learn about how I started the path of computer science.
+						</p>
+					</div>
 					<p>
-						Hi, everyone! My name is Sarah Huang, and welcome to my website! 
 						<br>
-						You can find my résumé here and learn about how I started the path of computer science.
-						<br><br>
-						<!--<iframe src="images/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>-->
+						<iframe src="assets/files/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>
 						<h3>hello past</h3>
 						At six years old, I learned how computer programming  would allow me to design video games just like the ones I was playing on my pink Nintendo Lite DS. 
 						With that childhood dream in mind, I took as many computer science courses as my high school schedule would afford and created a few small, amateur video game projects for class. 
@@ -280,9 +297,9 @@
 		</div>
 
 		<div id="companion">
-			<img src="images/spin.gif" alt="Cute computer model spinning clockwise" onclick="comp_talk()">
+			<img src="assets/files/companion/companion_spin.gif" alt="Cute computer model spinning clockwise" onclick="comp_talk()">
 			<audio id="compAudio">
-				<source src="images/claire_de_lune.mp3" type="audio/mpeg">
+				<source src="assets/files/companion/audio/claire_de_lune.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
 			</audio>
 		</div>	
