--- a/index.html
+++ b/index.html
@@ -116,7 +116,19 @@
 						This website's theme is based on the video's aesthetic. 
 						
 					</p>
-					<!--<h2>Meet </h2>-->	
+					<h3>Meet CC (Computer Companion)</h3>
+					<p>
+						See the lil robot on the top right corner? That's my Computer Companion or CC for short. 
+						I thought having a friend on my website would be fine. 
+						Don't get too excited though. For now, it's just a clickable image that plays sound.
+						It resembles Louie Zong's model in the song "hello world," but I CADed this model on Onshape from scratch with slight differences.
+						As for the animation, I used this <a href src="https://www.3dgifmaker.com">website</a> to make an animated gif of it fidgeting
+						to indicate to the user that you interacted with it.
+						The songs it plays uses the same software Louie used. 
+						You can learn more about <a href src="https://www.myriad-online.com/en/products/virtualsinger.htm">Virtual Singer</a> through the link.
+						In the future, I would love to incorporate speech bubbles and more interactivity to make it more alive than just a vibrating image.
+
+					</p>	
 				</article>
 
 				<article id="work-nulltime" class="panel">
@@ -134,7 +146,7 @@
 						<br>
 						Below is our powerpoint presentation that explains the software:
 					</p>
-					<iframe src= "assets/files/pdfs/Nulltime Demo.pdf" class="image featured" height="500"></iframe>
+					<!--<iframe src= "assets/files/pdfs/Nulltime Demo.pdf" class="image featured" height="500"></iframe>-->
 					<h3>My Contribution</h3>
 					<p>
 						This project convinced me that I wanted to do front-end development. 
@@ -244,7 +256,7 @@
 					</div>
 					<p>
 						<br>
-						<iframe src="assets/files/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>
+						<!--<iframe src="assets/files/pdfs/sarah_huang_resume.pdf" class="image featured" height="500"></iframe>-->
 						<h3>hello past</h3>
 						At six years old, I learned how computer programming  would allow me to design video games just like the ones I was playing on my pink Nintendo Lite DS. 
 						With that childhood dream in mind, I took as many computer science courses as my high school schedule would afford and created a few small, amateur video game projects for class. 
@@ -297,9 +309,21 @@
 		</div>
 
 		<div id="companion">
-			<img src="assets/files/companion/companion_spin.gif" alt="Cute computer model spinning clockwise" onclick="comp_talk()">
-			<audio id="compAudio">
-				<source src="assets/files/companion/audio/claire_de_lune.mp3" type="audio/mpeg">
+			<img id="cc" src="assets/files/companion/cc.png" width="150" alt="Cute computer model spinning clockwise" onclick="comp_talk()">
+			<audio id="sarah_stop_audio">
+				<source src="assets/files/companion/audio/cc_sarah_stop_edit.mp3" type="audio/mpeg">
+				Your browser does not support the audio element.
+			</audio>
+			<audio id="hello_world_audio">
+				<source src="assets/files/companion/audio/cc_sing_hello_world_edit.mp3" type="audio/mpeg">
+				Your browser does not support the audio element.
+			</audio>
+			<audio id="welcome_audio">
+				<source src="assets/files/companion/audio/cc_welcome_edit.mp3" type="audio/mpeg">
+				Your browser does not support the audio element.
+			</audio>
+			<audio id="louie_audio">
+				<source src="assets/files/companion/audio/cc_louie_zong_edit.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
 			</audio>
 		</div>	
