--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 						I thought having a friend on my website would be fine. 
 						Don't get too excited though. For now, it's just a clickable image that plays sound.
 						It resembles Louie Zong's model in the song "hello world," but I CADed this model on Onshape from scratch with slight differences.
-						As for the animation, I used this <a href src="https://www.3dgifmaker.com">website</a> to make an animated gif of it fidgeting
+						As for the animation, I used this <a href="https://www.3dgifmaker.com">website</a> to make an animated gif of it fidgeting
 						to indicate to the user that you interacted with it.
 						The songs it plays uses the same software Louie used. 
-						You can learn more about <a href src="https://www.myriad-online.com/en/products/virtualsinger.htm">Virtual Singer</a> through the link.
+						You can learn more about <a href="https://www.myriad-online.com/en/products/virtualsinger.htm">Virtual Singer</a> through the link.
 						In the future, I would love to incorporate speech bubbles and more interactivity to make it more alive than just a vibrating image.
 
 					</p>	
