adding stacker vs project

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
+								<a href="#work-portfolio" class="image fit"><img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
 								<a href="#work-portfolio" class="image fit"><img src="assets/files/images/project_thumbnails/pic01.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
@@ -93,6 +96,13 @@
 					</section>
 				</article>
 
+
+				<article id="stacker-vs" class="panel">
+					<header>
+						<h2>Stacker VS - <a href="https://github.com/sarhuang/sarhuang.github.io" class="fa fa-link"><span>GitHub</span></a></h2>
+					</header>
+					<img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" class="image centered" width="40%" alt="">
+				</article>
 
 				<article id="work-portfolio" class="panel">
 					<header>
