fixed the stacker vs link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#work-portfolio" class="image fit"><img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" alt=""></a>
+								<a href="#stacker-vs" class="image fit"><img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<a href="#work-portfolio" class="image fit"><img src="assets/files/images/project_thumbnails/pic01.png" alt=""></a>
