create mgp2 blog

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
+								<a href="#cheerio" class="image fit"><img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
 								<a href="#stacker-vs" class="image fit"><img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
@@ -96,6 +99,14 @@
 					</section>
 				</article>
 
+
+				<article id="cheerio" class="panel">
+					<header>
+						<h2>Cheerio Input - mgP2</h2>
+					</header>
+					<img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" class="image centered" width="40%" alt="">
+
+				</article>
 
 				<article id="stacker-vs" class="panel">
 					<header>
