finish writing cheerio prototype blog

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
-								<a href="#cheerio" class="image fit"><img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" alt=""></a>
+								<a href="#cheerio" class="image fit"><img src="assets/files/images/project_thumbnails/cheerio_250x195.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 								<a href="#stacker-vs" class="image fit"><img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" alt=""></a>
@@ -104,7 +104,79 @@
 					<header>
 						<h2>Cheerio Input - mgP2</h2>
 					</header>
-					<img src="assets/files/images/project_thumbnails/stacker_vs_edit.png" class="image centered" width="40%" alt="">
+					<img src="assets/files/images/project_thumbnails/cheerio_250x195.png" class="image centered" width="40%" alt="">
+					<h3>Purpose</h3>
+					<p>
+						In this assignment, the goal is to rethink the materiality of computing and interaction. 
+						You must make a primary input device (e.g., paper joystick) or a primary output device
+						(e.g., ambient display) using low-tech materials such as paper, conductive paint, play-dough, 
+						tape, water, food, etc. The primary interactivity must be mediated by the low-
+						tech material (i.e., the low-tech material cannot be superfluous to your design, it must
+						be directly integrated).
+					</p>
+					<br>
+					<h3>Idea Brainstorming</h3>
+					<p>
+						We thought of many different low-tech materials we could make our input device out of: air, water, food, 
+						sound, conductive surfaces (cardboard, tape). We ultimately narrowed it down to the "Food - My expired Cheerios
+						become a keyboard" and "paper guitar" as a back-up. The Cheerio idea came about because my Cheerios were expired and
+						idly sitting in my pantry. Their roundness reminded me of key caps on a keyboard. My partner, Christian, thought of
+						creating a paper guitar in honor of Paper Jamz from his childhood. Plus, using a graphite pencil and paper to create a
+						paper piano already exists so a guitar could also work.
+					</p>
+					<img src="assets/files/images/mgp2/mgp2_ideas.png" class="image centered" width="60%" alt="">
+					<h3>Iterative Prototyping - What can Cheerios do?</h3>
+					<b>Cheerio Keyboard</b>
+					<p>
+						As the originator of the Cheerio keyboard idea, the prototype below was what I first thought of. It started as a half-baked idea
+						that would be funny to press Cheerios instead of keys but ultimately wasn't very creative. Replacing the Cheerios with another food
+						item would lead to the same product. We wanted to capitalize on the properties of a Cheerio, so treating it like a standard keyboard
+						was not our solution.
+					</p>
+					<img src="assets/files/images/mgp2/cheerio_keyboard.jpg" class="image centered" width="50%" alt="">
+					
+					<b>Cheerio Keyboard Grid</b>
+					<p>
+						You can spell out letters with Cheerios! Inspired by the Professor Layton games in which the player must write out each letter in
+						a grid with their stylus, the user would have to start on the far left side of the grid and spell out the letter with Cheerios.
+						It would be able to detect capital and lowercase letters as well as symbols like μ (mu) as long as it fit in the grid.
+						Specific letter and symbol patterns would need to be implemented as we do not have the time to train a model to detect the various
+						combinations you can arrange Cheerios to make a "b". The problem is figuring out how to make a pressure plate system given the time
+						frame and without paying out of pocket.
+					</p>
+					<img src="assets/files/images/mgp2/cheerio_grid_b.jpg" class="image centered" width="50%" alt="">
+					<img src="assets/files/images/mgp2/cheerio_grid_i.jpg" class="image centered" width="50%" alt="">
+					<img src="assets/files/images/mgp2/cheerio_grid_symbol.jpg" class="image centered" width="50%" alt="">
+					
+					<b>Cheerio Thread</b>
+					<p>
+						Noticing we have conductive thread, we could use the Cheerios to block the thread from touching certain input areas. 
+						In this prototype, the black squares are conductive surfaces. We can move the Cheerios to block certain squares,
+						and the remaining ones could equal a certain input. If we still wanted to output characters, I can see the user
+						moving the Cheerios back and forth. This prototype was insightful because it used resources we already had and 
+						gave us something conductive to work with since Cheerios are insulators.
+					</p>
+					<img src="assets/files/images/mgp2/cheerio_thread.jpg" class="image centered" width="50%" alt="">
+
+					<b>Cheerio Shaker</b>
+					<p>
+						Since we have a microphone, we could utilize the sound of Cheerios. In our prototype, we store some Cheerios inside
+						this little bag and shake it like a maraca. One Cheerio will sound different than multiple Cheerios, and that could
+						mean different input. Honestly, this prototype might not lead us anywhere because we have to brainstorm all the different
+						ways to differentiate sound since it cannot tell exactly how many Cheerios are used in a bag. 
+					</p>
+					<img src="assets/files/images/mgp2/cheerio_shaker.jpg" class="image centered" width="50%" alt="">
+					<img src="assets/files/images/mgp2/cheerio_shaker2.jpg" class="image centered" width="50%" alt="">
+
+					<b>Cheerio Temperature</b>
+					<p>
+						Our last quick prototype uses the temperature sensor. We considered creating a game where two players flick
+						Cheerios into goals. One player would use dry Cheerios and the other wet Cheerios. The temperature sensor would
+						help determine who scored a point based on how wet/cold the Cheerio is. The Cheerio slides right through the sensor
+						due to its hole, so maybe a player wins or scores a point when they've flicked enough Cheerios for the top one to be touching the sensor.
+					</p>
+					<img src="assets/files/images/mgp2/cheerio_temperature.jpg" class="image centered" width="50%" alt="">
+
 
 				</article>
 
