--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 				<article id="cheerio" class="panel">
 					<header>
-						<h2>Cheerio Slider (mgp2) - <a href="https://github.com/sarhuang/cosc594/tree/main/mgp2" class="fa fa-link"><span>GitHub</span></a></h2>
+						<h2>Cheerio Slider (mgp2) - <a href="https://github.com/sarhuang/cosc594/blob/main/mgp2/mgp2_final.ino" class="fa fa-link"><span>GitHub</span></a></h2>
 					</header>
 					<img src="assets/files/images/project_thumbnails/cheerio_250x195.png" class="image centered" width="40%" alt="">
 					<h3>Purpose</h3>
@@ -200,11 +200,14 @@
 					<p>
 						Due to time constraints, we didn't fully investigate the conductive properties of the conductive thread.
 						We originally had one long string for all 8 sensors, but the slightest change to one sensor would affect
-						all of the readings. We decided to then a string and Cheerio per two sensors. This didn't help the sensitivity issues
+						all of the readings. Instead of using one digital pin for the capacitive sensor, we decide to allocate a pin
+						to each sensor, so they read independently.
+						Additionally, we decided to then a string and Cheerio per two sensors. This didn't help the sensitivity issues
 						and complicated our code since we needed to find the difference in threshold between the baseline and current reading.  
 					</p>
 					<img src="assets/files/images/mgp2/cheerio_prototype3.jpg" class="image centered" width="50%" alt="">
 					<h3>Cheerio Slider - Final Product</h3>
+					<img src="assets/files/images/mgp2/cheerio_final.jpg" class="image centered" width="50%" alt="">
 					<h4>Materials</h4>
 					<ul>
 						<li>Regular-shaped Cheerios (x8)</li>
@@ -238,9 +241,7 @@
 							<li>Slide the Cheerio back onto the pad to reset it back to 0.</li>
 						</ol>
 					</p>
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/osojH2Au4Iw?si=kHFMHn0yaoyPpp14" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-					<img src="assets/files/images/mgp2/cheerio_final.jpg" class="image centered" width="50%" alt="">
-					<h3>Conclusion</h3>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/bEUFdP1hgnM?si=9bt_pYiaP3_zX111" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>					<h3>Conclusion</h3>
 					<p>
 						We successfully demonstrated iterative prototyping.
 						We started with many ideas and narrowed it down to one.
