--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
 					<p>
 						<b>Here's how it works:</b>
 						<ol>
-							<li>At it's current position, the number output is 0 when all of the Cheerios are resting on the copper tape pads.</li>
+							<li>Make sure the potentiometer is turned all the way to value 0 to print output</li>
+							<li>At its current position, the number output is 0 when all of the Cheerios are resting on the copper tape pads.</li>
 							<li>Slide a Cheerio off one of the pads.</li>
 							<li>The number output will change to the number you just moved.</li>
 							<li>Slide the Cheerio back onto the pad to reset it back to 0.</li>
