work on mgp3 blog

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 					<section>
 						<div class="row">
 							<div class="col-4 col-6-medium col-12-small">
+								<a href="#imu" class="image fit"><img src="assets/files/images/project_thumbnails/pic01.png" alt=""></a>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
 								<a href="#cheerio" class="image fit"><img src="assets/files/images/project_thumbnails/cheerio_250x195.png" alt=""></a>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
@@ -99,6 +102,19 @@
 					</section>
 				</article>
 
+
+				<article id="imu" class="panel">
+					<header>
+						<h2>IMU & Motor Project (mgp3) - <a href="https://github.com/sarhuang/cosc594/tree/main/mgp3" class="fa fa-link"><span>GitHub</span></a></h2>
+					</header>
+					<img src="assets/files/images/project_thumbnails/wip_260x195.png" class="image centered" width="40%" alt="">
+					<h3>Purpose</h3>
+					<p>
+						Use the IMU (along with other sensors if desired) to
+						create a physical-based interaction that is digitized, analyzed, and then used to
+						control/actuate (provide haptics or move things) in the real world. 
+					</p>
+				</article>
 
 				<article id="cheerio" class="panel">
 					<header>
